...
              <FlatList
                data={activities}
                renderItem={({item}) => renderItem(item)}
                keyExtractor={(item, index) => index.toString()}
              />
            </SafeAreaView>
            <ActionButton testID="add_button" buttonColor="#55FF00" buttonTextStyle={{ color: '#444' }} onPress={() => navigation.navigate('Edit')}>
            </ActionButton>
        </>
    );
}

const styles = StyleSheet.create({
...
